feito varias alterações

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Projeto de extensão III</title>
-		<link rel="stylesheet" type="text/css" href="CSS/home.css">
+		<title>Home</title>
+		<link rel="stylesheet" type="text/css" href="/src/css/home.css">
 	</head>
 	<body>
 		<!-- Menu -->
@@ -13,10 +13,10 @@
 		</div>
 		<div id="menu">
 			<a href="/index.html">Home</a>
-			<a href="/html/oquee.html">O que é ? </a>
-			<a href="/html/sintomas.html">Sintomas</a>
-			<a href="/html/testeonline.html">Teste online</a>
-			<a href="/html/contato.html">Contato</a>
+			<a href="/src/html/oquee.html">O que é ? </a>
+			<a href="/src/html/sintomas.html">Sintomas</a>
+			<a href="/src/html/testeonline.html">Causas</a>
+			<a href="/src/html/contato.html">Contato</a>
 		</div>
 		<!-- Area Principal -->
 		<div id="conteudo">
@@ -25,7 +25,7 @@
 				<h1>Autismo:Graus, sintomas(e teste online)</h1>
 				<span class="title_time">Postado as <time> 10:25 </time> na data 05/07/2024</span>				
 				<br>
-				<img src="/imagem/Autismo_ o que é, sintomas, graus (e teste online) - Tua Saúde - Google Chrome 04_07_2024 13_10_29.png" title="computador">
+				<img src="/src/img/Autismo_ o que é, sintomas, graus (e teste online) - Tua Saúde - Google Chrome 04_07_2024 13_10_29.png" title="computador">
 				<p>Pessoas com autismo tendem a manter pouco contato visual ao conversar e ter dificuldade para interagir ou compreender gestos, por exemplo.Além disso, 
 					também podem se interessar excessivamente por temas específicos ou apresentar dificuldade para se adaptar à mudanças na rotina.
 					Em caso de suspeita de autismo, é importante consultar um pediatra ou neuropediatra, para confirmar o diagnóstico e iniciar o tratamento apropriado, 
@@ -48,7 +48,7 @@
 					mesmo no autismo leve é necessário algum apoio para que a pessoa consiga relacionar-se bem e desenvolver suas habilidades. 
 				</li>	
 				<br>
-				<img src="/imagem/4.png" title="apple all devices">
+				<img src="/src/img/4.png" title="apple all devices">
 			
 				<br>
 				<li>
@@ -80,18 +80,7 @@
 
 				<br>
 			
-                </div>	
-				 <!-- Limpa Float -->
-				<div id="clear_box"></div>		
-				<div class="caixa_news">
-					<div class="cabecalho">
-						<h1 class="Title_caixa">Categorias</h1>
-					</div>
-					<a href="html/jogo.html" class="link_cat">Jogos</a><br>
-					<a href="html/celular.html" class="link_cat">Celulares</a><br>
-					<a href="html/informacao" class="link_cat">Informatica</a><br>
-					<a href="html/eletronico.html" class="link_cat">Eletrônicos</a><br>							
-				</div>
+                
 			</div>
 			<div id="clear_box"></div>
 		</div>	
