--- a/src/html/contato.html
+++ b/src/html/contato.html
@@ -3,8 +3,8 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>TecBlog - Celular</title>
-		<link rel="stylesheet" type="text/css" href="/CSS/contato.css">
+		<title>Contato</title>
+		<link rel="stylesheet" type="text/css" href="/src/css/contato.css">
 	</head>
 	<body>
 		<!-- Menu -->
@@ -13,10 +13,10 @@
 		</div>
 		<div id="menu">
 			<a href="/index.html">Home</a>
-			<a href="/html/oquee.html">O que é ? </a>
-			<a href="/html/sintomas.html">Sintomas</a>
-			<a href="/html/testeonline.html">Teste online</a>
-			<a href="/html/contato.html">Contato</a>
+			<a href="/src/html/oquee.html">O que é ? </a>
+			<a href="/src/html/sintomas.html">Sintomas</a>
+			<a href="/src/html/testeonline.html">Causas</a>
+			<a href="/src/html/contato.html">Contato</a>
 		</div>
 		<!-- Area Principal -->
 		<div id="conteudo">
