--- a/src/html/sintomas.html
+++ b/src/html/sintomas.html
@@ -3,8 +3,8 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>TecBlog - Jogo</title>
-		<link rel="stylesheet" type="text/css" href="/CSS/sintomas.css">
+		<title>Sintomas</title>
+		<link rel="stylesheet" type="text/css" href="/src/css/sintomas.css">
 	</head>
 	<body>
 		<!-- Menu -->
@@ -13,10 +13,10 @@
 		</div>
 		<div id="menu">
 			<a href="/index.html">Home</a>
-			<a href="/html/oquee.html">O que é ? </a>
-			<a href="/html/sintomas.html">Sintomas</a>
-			<a href="/html/testeonline.html">Teste online</a>
-			<a href="/html/contato.html">Contato</a>
+			<a href="/src/html/oquee.html">O que é ? </a>
+			<a href="/src/html/sintomas.html">Sintomas</a>
+			<a href="/src/html/testeonline.html">Causas</a>
+			<a href="/src/html/contato.html">Contato</a>
 		</div>
 		<!-- Area Principal -->
 		<div id="conteudo">
@@ -26,7 +26,7 @@
 				<h2>Os principais sinais e sintomas de autismo são:</h2>
 				<span class="title_time">Postado as <time> 10:25 </time> na data 04/07/2024</span>				
 				<br>
-				<img src="/imagem/fotos de austimo TEA para blog - Pesquisa Google - Google Chrome 04_07_2024 14_18_34.png" title="computador">
+				<img src="/src/img/fotos de austimo TEA para blog - Pesquisa Google - Google Chrome 04_07_2024 14_18_34.png" title="computador">
 				
 					<li>
 					<strong>Dificuldade na interação social, </strong>
@@ -65,7 +65,7 @@
 				<br>
 				<p>	O tratamento do autismo deve ser feito com acompanhamento de um médico e varia de acordo com as necessidades individuais, podendo incluir:
                 </p>
-				<img src="/imagem/segudasintomas.png" title="God Of War">
+				<img src="/src/img/segudasintomas.png" title="God Of War">
 					<br>
 					<br>
 					<li>
