--- a/src/html/oquee.html
+++ b/src/html/oquee.html
@@ -3,20 +3,20 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>TecBlog - Eletrônico</title>
-		<link rel="stylesheet" type="text/css" href="/CSS/oquee.css">
+		<title>O que é ?</title>
+		<link rel="stylesheet" type="text/css" href="/src/css/oquee.css">
 	</head>
 	<body>
 		<!-- Menu -->
 		<div id="Logo">
-			<h1 id="Title"><span id="format_text">Portal</span> TED</h1>
+			<h1 id="Title"><span id="format_text">Portal</span> TEA</h1>
 		</div>
 		<div id="menu">
 			<a href="/index.html">Home</a>
-			<a href="/html/oquee.html">O que é ? </a>
-			<a href="/html/sintomas.html">Sintomas</a>
-			<a href="/html/testeonline.html">Teste online</a>
-			<a href="/html/contato.html">Contato</a>
+			<a href="/src/html/oquee.html">O que é ? </a>
+			<a href="/src/html/sintomas.html">Sintomas</a>
+			<a href="/src/html/testeonline.html">Causas</a>
+			<a href="/src/html/contato.html">Contato</a>
 		</div>
 		<!-- Area Principal -->
 		<div id="conteudo">
@@ -28,7 +28,7 @@
 				<span class="title_time">Postado as <time> 10:25 </time> na data 05/07/2024</span>				
 				<br>
 				<p>O transtorno do espectro autista (TEA) é um distúrbio do neurodesenvolvimento caracterizado por desenvolvimento atípico, manifestações comportamentais, déficits na comunicação e na interação social, padrões de comportamentos repetitivos e estereotipados, podendo apresentar um repertório restrito de interesses e atividades.</p>
-				<img src="/imagem/TecBlog - Informatica - Google Chrome 04_07_2024 16_28_00.png" title="processador">
+				<img src="/src/img/terapia ocupacional medica consulta autismo - Pesquisa Google - Google Chrome 04_07_2024 21_51_19.png" title="processador">
 				<p>
 					Sinais de alerta no neurodesenvolvimento da criança podem ser percebidos nos primeiros meses de vida, sendo o diagnóstico estabelecido por volta dos 2 a 3 anos de idade. A prevalência é maior no sexo masculino.
 
@@ -40,9 +40,9 @@ Ressalta-se que o tratamento oportuno com estimulação precoce deve ser preconi
 				<br>
 				<br>
 				<h2>Titulo da Postagem 2</h2>
-				<span class="title_time">Postado as <time> 13:47 </time> na data 27/08/2023</span>	
+				<span class="title_time">Postado as <time> 13:47 </time> na data 05/07/2024</span>	
 				<br>	
-				<img src="../imagem/imagem12.jpg" title="quantico">
+				<img src="/src/img/TecBlog - Informatica - Google Chrome 04_07_2024 16_28_00.png" title="quantico">
 				<p>
 					Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. 
 				</p>	
@@ -51,30 +51,20 @@ Ressalta-se que o tratamento oportuno com estimulação precoce deve ser preconi
 				<br>
 				<br>
 				<br>
-				<h2>Titulo da Postagem 3</h2>
+				<h2>Autismo tem cura?
+				</h2>
 				<span class="title_time">Postado as <time> 13:47 </time> na data 27/08/2023</span>	
 				<br>	
-				<img src="../imagem/imagem13.jpg" title="quantico">
+				<img src="/src/img/4.png" title="quantico">
 				<p>
-					Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. 
+					O autismo não tem cura, no entanto, quando o tratamento é realizado corretamente, pode ajudar a melhorar a qualidade de vida, a capacidade de comunicação e a autonomia da pessoa.
 				</p>	
 				<a href="" class="link_leia">leia Mais</a>		
 				<br>
 				<br>				
 			</div>		
 		
-				 <!-- Limpa Float -->
-				<div id="clear_box"></div>		
-				<div class="caixa_news">
-					<div class="cabecalho">
-						<h1 class="Title_caixa">Categorias</h1>
-					</div>
-					<a href="/index.html">Home</a>
-			<a href="/html/oquee.html">O que é ? </a>
-			<a href="/html/sintomas.html">Sintomas</a>
-			<a href="/html/testeonline.html">Teste online</a>
-			<a href="/html/contato.html">Contato</a>>							
-				</div>
+						
 			</div>
 			<div id="clear_box"></div>
 		</div>	
