--- a/src/html/contato.html
+++ b/src/html/contato.html
@@ -12,10 +12,10 @@
 			<h1 id="Title"><span id="format_text">Portal</span> TED</h1>
 		</div>
 		<div id="menu">
-			<a href="/index.html">Home</a>
+			<a href="/src/index.html">Home</a>
 			<a href="/src/html/oquee.html">O que é ? </a>
 			<a href="/src/html/sintomas.html">Sintomas</a>
-			<a href="/src/html/testeonline.html">Causas</a>
+			<a href="/src/html/caracteristicas.html">Características</a>
 			<a href="/src/html/contato.html">Contato</a>
 		</div>
 		<!-- Area Principal -->
