--- a/src/html/oquee.html
+++ b/src/html/oquee.html
@@ -12,10 +12,10 @@
 			<h1 id="Title"><span id="format_text">Portal</span> TEA</h1>
 		</div>
 		<div id="menu">
-			<a href="/index.html">Home</a>
+			<a href="/src/index.html">Home</a>
 			<a href="/src/html/oquee.html">O que é ? </a>
 			<a href="/src/html/sintomas.html">Sintomas</a>
-			<a href="/src/html/testeonline.html">Causas</a>
+			<a href="/src/html/caracteristicas.html">Características</a>
 			<a href="/src/html/contato.html">Contato</a>
 		</div>
 		<!-- Area Principal -->
@@ -39,21 +39,36 @@ Ressalta-se que o tratamento oportuno com estimulação precoce deve ser preconi
 				<a href="" class="link_leia">leia Mais</a>
 				<br>
 				<br>
-				<h2>Titulo da Postagem 2</h2>
+				<h2>Importância da Inclusão e Aceitação
+				</h2>
 				<span class="title_time">Postado as <time> 13:47 </time> na data 05/07/2024</span>	
 				<br>	
+				<p>A inclusão e aceitação das pessoas com TEA na sociedade é fundamental. Isso envolve promover a conscientização sobre o autismo, combater estigmas e garantir que as pessoas com TEA tenham acesso às mesmas oportunidades que os demais. A construção de uma sociedade inclusiva começa com a educação e a empatia.</p>
 				<img src="/src/img/TecBlog - Informatica - Google Chrome 04_07_2024 16_28_00.png" title="quantico">
 				<p>
-					Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. 
-				</p>	
+					<h1>Recursos e Apoio para Famílias:</h1>
+					<p>Famílias de pessoas com TEA frequentemente precisam de apoio e recursos para navegar pelos desafios associados ao autismo. Algumas formas de suporte incluem:</p>
+					<br>
+					<li>
+						<strong>Grupos de apoio: </strong>
+						Conectar-se com outras famílias que enfrentam desafios semelhantes pode ser uma fonte valiosa de conforto e informação.
+					</li>
+					<br>
+					<li> 
+						<strong>Serviços de advocacia:</strong>
+						Ajudar as famílias a entender e defender seus direitos legais e educacionais.
+					</li>
+					<br>
+					<li>
+						<strong>Recursos online: </strong>
+						Sites e organizações que oferecem informações, ferramentas e suporte para famílias de pessoas com TEA.
+					</li>
 				<a href="" class="link_leia">leia Mais</a>		
-				<br>
-				<br>
-				<br>
+			    <br>
 				<br>
 				<h2>Autismo tem cura?
 				</h2>
-				<span class="title_time">Postado as <time> 13:47 </time> na data 27/08/2023</span>	
+				<span class="title_time">Postado as <time> 13:47 </time> na data 05/07/2024</span>	
 				<br>	
 				<img src="/src/img/4.png" title="quantico">
 				<p>
