--- a/src/index.html
+++ b/src/index.html
@@ -12,17 +12,17 @@
 			<h1 id="Title"><span id="format_text">Portal</span> TEA </h1>
 		</div>
 		<div id="menu">
-			<a href="/index.html">Home</a>
+			<a href="/src/index.html">Home</a>
 			<a href="/src/html/oquee.html">O que é ? </a>
 			<a href="/src/html/sintomas.html">Sintomas</a>
-			<a href="/src/html/testeonline.html">Causas</a>
+			<a href="/src/html/caracteristicas.html">Características</a>
 			<a href="/src/html/contato.html">Contato</a>
 		</div>
 		<!-- Area Principal -->
 		<div id="conteudo">
 			<!-- Postagens -->
 			<div id="noticia">
-				<h1>Autismo:Graus, sintomas(e teste online)</h1>
+				<h1>Autismo:Graus, sintomas(e características)</h1>
 				<span class="title_time">Postado as <time> 10:25 </time> na data 05/07/2024</span>				
 				<br>
 				<img src="/src/img/Autismo_ o que é, sintomas, graus (e teste online) - Tua Saúde - Google Chrome 04_07_2024 13_10_29.png" title="computador">
