--- a/src/html/contato.html
+++ b/src/html/contato.html
@@ -9,14 +9,14 @@
 	<body>
 		<!-- Menu -->
 		<div id="Logo">
-			<h1 id="Title"><span id="format_text">Portal</span> TED</h1>
+			<h1 id="Title"><span id="format_text">Portal</span> TEA</h1>
 		</div>
 		<div id="menu">
 			<a href="/src/index.html">Home</a>
 			<a href="/src/html/oquee.html">O que é ? </a>
-			<a href="/src/html/sintomas.html">Sintomas</a>
+			<a href="/src/html/sintomas.html">Comportamentos</a>
 			<a href="/src/html/caracteristicas.html">Características</a>
-			<a href="/src/html/contato.html">Contato</a>
+			
 		</div>
 		<!-- Area Principal -->
 		<div id="conteudo">
