--- a/src/html/oquee.html
+++ b/src/html/oquee.html
@@ -14,9 +14,9 @@
 		<div id="menu">
 			<a href="/src/index.html">Home</a>
 			<a href="/src/html/oquee.html">O que é ? </a>
-			<a href="/src/html/sintomas.html">Sintomas</a>
+			<a href="/src/html/sintomas.html">Comportamentos</a>
 			<a href="/src/html/caracteristicas.html">Características</a>
-			<a href="/src/html/contato.html">Contato</a>
+			
 		</div>
 		<!-- Area Principal -->
 		<div id="conteudo">
@@ -85,7 +85,7 @@ Ressalta-se que o tratamento oportuno com estimulação precoce deve ser preconi
 		</div>	
 		<!-- RodaPé -->
 		<div id="rodape">
-			<h3>Todos os Direitos Reservados 2023 - Ighor Drummond</h3>
+			<h3>PROJETO DE EXTENSÃO III - ICEV - MATHEUS FERREIRA MENDES</h3>
 		</div>
 		
 	</body>
