--- a/src/html/sintomas.html
+++ b/src/html/sintomas.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Sintomas</title>
+		<title>Comportamentos</title>
 		<link rel="stylesheet" type="text/css" href="/src/css/sintomas.css">
 	</head>
 	<body>
@@ -14,16 +14,16 @@
 		<div id="menu">
 			<a href="/src/index.html">Home</a>
 			<a href="/src/html/oquee.html">O que é ? </a>
-			<a href="/src/html/sintomas.html">Sintomas</a>
+			<a href="/src/html/sintomas.html">Comportamentos</a>
 			<a href="/src/html/caracteristicas.html">Características</a>
-			<a href="/src/html/contato.html">Contato</a>
+	
 		</div>
 		<!-- Area Principal -->
 		<div id="conteudo">
 			<!-- Postagens -->
 			<div id="noticia">
-				<h1>Principais sinais e sintomas</h1>
-				<h2>Os principais sinais e sintomas de autismo são:</h2>
+				<h1>Principais sinais e comportamentos</h1>
+				<h2>Os principais sinais e manifestações de autismo são:</h2>
 				<span class="title_time">Postado as <time> 10:25 </time> na data 04/07/2024</span>				
 				<br>
 				<img src="/src/img/fotos de austimo TEA para blog - Pesquisa Google - Google Chrome 04_07_2024 14_18_34.png" title="computador">
