--- a/src/index.html
+++ b/src/index.html
@@ -14,15 +14,15 @@
 		<div id="menu">
 			<a href="/src/index.html">Home</a>
 			<a href="/src/html/oquee.html">O que é ? </a>
-			<a href="/src/html/sintomas.html">Sintomas</a>
+			<a href="/src/html/sintomas.html">Comportamentos</a>
 			<a href="/src/html/caracteristicas.html">Características</a>
-			<a href="/src/html/contato.html">Contato</a>
+		
 		</div>
 		<!-- Area Principal -->
 		<div id="conteudo">
 			<!-- Postagens -->
 			<div id="noticia">
-				<h1>Autismo:Graus, sintomas(e características)</h1>
+				<h1>Autismo:Espectros, comportamentos(e características)</h1>
 				<span class="title_time">Postado as <time> 10:25 </time> na data 05/07/2024</span>				
 				<br>
 				<img src="/src/img/Autismo_ o que é, sintomas, graus (e teste online) - Tua Saúde - Google Chrome 04_07_2024 13_10_29.png" title="computador">
@@ -33,7 +33,7 @@
 				<a href="" class="link_leia">leia Mais</a>
 				<br>
 				<br>
-				<h1>Graus de autismo
+				<h1>Espectros do autismo
 				</h1>
 				<h2>A gravidade do autismo pode ser classificada em:
 				</h2>
